# rust-dashboard-native-wasm-sqlite

./: Cargo.toml  README.md  README_tr.md  index.html  run_httpserver_with_bun.bat  run_httpserver_with_deno.bat  run_httpserver_with_python.bat
server/: README.md  index.ts
server/db/: Northwind.db
src/: app.rs  lib.rs  main.rs  workspace.rs
src/views/: info.rs  mod.rs  sqlitedata.rs  testwindow.rs
