[package]
name = "emartident_rust"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = "0.31.1"

# Genel bağımlılıklar
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] } # Serde ve derive özelliği eklendi
poll-promise = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Document", "HtmlCanvasElement", "Window", "Element", "Request", "RequestInit", "RequestMode", "Response", "Headers"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
# reqwest'i WASM için kaldırıyoruz, yerine Fetch API kullanacağız.
# reqwest = { version = "0.12", default-features = false, features = ["json", "wasm-bindgen"] }
[[bin]]
name = "emartident_rust_app"
path = "src/main.rs" 

# Native (non-WASM) hedefler için özel bağımlılıklar
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] } # Native için blocking ve rustls-tls ile

# Geliştirme (debug) profili için ayarlar
# Hem native hem de `wasm-pack build --dev` için geçerli olacaktır.
[profile.dev]
opt-level = 2

# Sürüm (release) profili için ayarlar
# Hem native hem de `wasm-pack build` (varsayılan olarak release) için geçerli olacaktır.
[profile.release]
opt-level = 2
